--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -36,7 +36,7 @@
                                 <a class="nav-link" href="/quiz_management/{{name}}">Quiz</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/analytics/{{name}}">Summary</a>
+                                <a class="nav-link" href="/analytics/{{name}}">Analytics</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/admin/user_details/{{name}}">User Details</a>
